2018-06-20  Manuel Rego Casasnovas  <rego@igalia.com>

        [WPE] Some fixups on webkit.org page
        https://bugs.webkit.org/show_bug.cgi?id=186844

        Unreviewed as the content is not modified, only some minor fixups on the format.

        * wpe.md: Remove title as it's already provided by the website CMS.
        Avoid breaking lines at 80 chars as it's not rendered as expected.

2018-06-20  Manuel Rego Casasnovas  <rego@igalia.com>

        [WPE] Add page for webkit.org
        https://bugs.webkit.org/show_bug.cgi?id=186844

        Reviewed by Michael Catanzaro.

        * wpe.md: Added.

2018-06-14  Roy Reapor  <rreapor@apple.com>

        Use new jQuery file layout
        https://bugs.webkit.org/show_bug.cgi?id=186636

        Reviewed by Aakash Jain.

        * ajax/libs/jqueryui/jquery-ui-1.8.15.css: Removed.
        * ajax/libs/jqueryui/jquery-ui-1.8.15.min.js: Removed.

2018-06-14  Jon Davis  <jond@apple.com>

        Minor layout fix for WebKit Feature Status Page
        https://bugs.webkit.org/show_bug.cgi?id=186539

        Reviewed by Timothy Hatcher.

        * wp-content/themes/webkit/status.php: Added padding below the bottom paragraph.

2018-06-14  Roy Reapor  <rreapor@apple.com>

        jQuery UI image assets are missing on webkit.org website.
        https://bugs.webkit.org/show_bug.cgi?id=185949

        Reviewed by Aakash Jain.

        * ajax/libs/jqueryui/1.8.15/themes/base/images/ui-bg_flat_0_aaaaaa_40x100.png: Added.
        * ajax/libs/jqueryui/1.8.15/themes/base/images/ui-bg_flat_75_ffffff_40x100.png: Added.
        * ajax/libs/jqueryui/1.8.15/themes/base/images/ui-bg_glass_55_fbf9ee_1x400.png: Added.
        * ajax/libs/jqueryui/1.8.15/themes/base/images/ui-bg_glass_65_ffffff_1x400.png: Added.
        * ajax/libs/jqueryui/1.8.15/themes/base/images/ui-bg_glass_75_dadada_1x400.png: Added.
        * ajax/libs/jqueryui/1.8.15/themes/base/images/ui-bg_glass_75_e6e6e6_1x400.png: Added.